<resources>
    <string name="app_name">MeDemoAppEx4</string>
    <string name="welcome">Welcome to Adventure Learning Club</string>
    <string name="register">Registration Form</string>
    <string name="full_name">Full Name :</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="school">School :</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone">Phone :</string>
    <string name="e_mail">E-Mail :</string>
    <string name="student_id">Student ID :</string>
</resources>